--- a/css/styles.css
+++ b/css/styles.css
@@ -645,10 +645,18 @@ progress {
   .container-sm, .container {
     max-width: 540px;
   }
+   .moo-lah-lah-regular {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
 }
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
     max-width: 720px;
+  }
+    .moo-lah-lah-regular {
+    font-size: 2.5rem;
+    line-height: 3rem;
   }
 }
 @media (min-width: 992px) {
@@ -10985,10 +10993,18 @@ p {
     position: absolute;
     bottom: -2rem;
   }
+    .moo-lah-lah-regular {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
 }
 @media (min-width: 1200px) {
   .intro .intro-text {
     width: 45%;
+  }
+    .moo-lah-lah-regular {
+    font-size: 2.5rem;
+    line-height: 3rem;
   }
 }
 
